--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tiptap/extension-text-align": "^2.0.0-beta.20",
     "@tiptap/starter-kit": "^2.0.0-beta.81",
     "@tiptap/vue-2": "^2.0.0-beta.42",
+    "ant-design-vue": "^1.7.7",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "d3": "^7.0.0",
