--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "@tiptap/extension-text-align": "^2.0.0-beta.20",
     "@tiptap/starter-kit": "^2.0.0-beta.81",
     "@tiptap/vue-2": "^2.0.0-beta.42",
-    "ant-design-vue": "^1.7.7",
+    "async-validator": "1.11.5",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "d3": "^7.0.0",
     "element-tiptap": "^1.26.2",
+    "element-ui": "^2.15.5",
     "esbuild-loader": "^2.15.0",
     "node-sass": "4.12.0",
     "ramda": "^0.27.1",
